--- a/css/theme/blood.css
+++ b/css/theme/blood.css
@@ -25,12 +25,12 @@ body {
 
 ::selection {
   color: #fff;
-  background: #a23;
+  background: #00FF00;
   text-shadow: none; }
 
 ::-moz-selection {
   color: #fff;
-  background: #a23;
+  background: #00FF00;
   text-shadow: none; }
 
 .reveal .slides section,
@@ -212,7 +212,7 @@ body {
  * LINKS
  *********************************************/
 .reveal a {
-  color: #a23;
+  color: #00FF00;
   text-decoration: none;
   -webkit-transition: color .15s ease;
   -moz-transition: color .15s ease;
@@ -247,21 +247,21 @@ body {
 
 .reveal a:hover img {
   background: rgba(255, 255, 255, 0.2);
-  border-color: #a23;
+  border-color: #00FF00;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.55); }
 
 /*********************************************
  * NAVIGATION CONTROLS
  *********************************************/
 .reveal .controls {
-  color: #a23; }
+  color: #00FF00; }
 
 /*********************************************
  * PROGRESS BAR
  *********************************************/
 .reveal .progress {
   background: rgba(0, 0, 0, 0.2);
-  color: #a23; }
+  color: #00FF00; }
 
 .reveal .progress span {
   -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
