--- a/css/theme/blood.css
+++ b/css/theme/blood.css
@@ -219,7 +219,7 @@ body {
   transition: color .15s ease; }
 
 .reveal a:hover {
-  color: #dd5566;
+  color: #00FF55;
   text-shadow: none;
   border: none; }
 
@@ -247,7 +247,7 @@ body {
 
 .reveal a:hover img {
   background: rgba(255, 255, 255, 0.2);
-  border-color: #00FF00;
+  border-color: #00FF55;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.55); }
 
 /*********************************************
