--- a/css/theme/night.css
+++ b/css/theme/night.css
@@ -22,12 +22,12 @@ body {
 
 ::selection {
   color: #fff;
-  background: #e7ad52;
+  background: #9663b1;
   text-shadow: none; }
 
 ::-moz-selection {
   color: #fff;
-  background: #e7ad52;
+  background: #9663b1;
   text-shadow: none; }
 
 .reveal .slides > section,
@@ -207,7 +207,7 @@ body {
  * LINKS
  *********************************************/
 .reveal a {
-  color: #e7ad52;
+  color: #9663b1;
   text-decoration: none;
   -webkit-transition: color .15s ease;
   -moz-transition: color .15s ease;
@@ -242,21 +242,21 @@ body {
 
 .reveal a:hover img {
   background: rgba(255, 255, 255, 0.2);
-  border-color: #e7ad52;
+  border-color: #9663b1;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.55); }
 
 /*********************************************
  * NAVIGATION CONTROLS
  *********************************************/
 .reveal .controls {
-  color: #e7ad52; }
+  color: #9663b1; }
 
 /*********************************************
  * PROGRESS BAR
  *********************************************/
 .reveal .progress {
   background: rgba(0, 0, 0, 0.2);
-  color: #e7ad52; }
+  color: #9663b1; }
 
 .reveal .progress span {
   -webkit-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
@@ -302,5 +302,3 @@ body {
 
 .reveal small code {
   vertical-align: baseline; }
-
-
